# options-chatbot

./: .gitignore  AGENTS.md  README.md  ai_commodity_contract.py  ai_commodity_universe.py  alpaca_market_data.py  app.py  auto_scan.py  auto_scan_metrics.py  brain_changelog.json  chat_history.backup-before-comparable-contract-backfill-20260414-122523.db  chat_history.backup-before-comparable-contract-backfill-20260414-123252.db  chat_history.backup-before-comparable-contract-backfill-20260414-124149.db  chat_history.db  compose.yaml  eslint.config.mjs  exact_contract_accounting.py  expectancy_calibration.py  experiment_scoreboard.py  forward_options_ledger.py  historical_options_store.py  lane_research_controls.py  lane_universe_manifest.py  local_env.py  main.py  market_data_service.py  metric_truth_audit.py  next.config.ts  options_chatbot.py  options_execution.py  options_profit_flywheel.py  options_profit_gate.py  options_profit_state.py  options_profitability_forensics.py  options_profitability_lab.py  package-lock.json  package.json  predictions.json  profit_loop_automation.py  profit_loop_shared_state.py  (+16 more)
crypto_options/: __init__.py  config.py  deribit.py  execution.py  signals.py
data/: chat_history.pre-data-integrity-repair-20260605T124724Z.db  stop_loss_sweep_results.json  tracked_positions.backup-20260414-112739.db  tracked_positions.backup-before-comparable-contract-backfill-20260414-122523.db  tracked_positions.backup-before-comparable-contract-backfill-20260414-122928.db  tracked_positions.backup-before-comparable-contract-backfill-20260414-123208.db  (+6 more)
(+975 files in other folders)
