[project]
name = "ai-python"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.86.0",
    "numpy>=2.4.3",
    "optuna>=3.6.0",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
    "scipy>=1.17.1",
    "streamlit>=1.55.0",
    "streamlit-authenticator>=0.4.2",
    "yfinance>=1.2.0",
]
